[gd_scene load_steps=2 format=3 uid="uid://denc7grw42qsu"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/docks/material_palette/material_viewer/material_viewer.gd" id="1_nrjye"]

[node name="MaterialViewer" type="PanelContainer"]
offset_right = 523.0
offset_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nrjye")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="bn_refresh_mat_list" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Refresh Material List
"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ButtonArea" type="HFlowContainer" parent="VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/bn_refresh_mat_list" to="." method="_on_bn_refresh_mat_list_pressed"]
